# brfteleterrassen1

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  brfteleterrassen1.cabal  cabal.project  entre.md  flake.nix  ghcid.sh
.github/workflows/: pages.yml
bench/: Main.hs
content/: news.json  site.json
content/documents/: documents.json
content/pages/: about.json  brokers.json  contact.json  home.json  members.json  trivselregler.json
content/static/: style.css
lib/: Brfteleterrassen1.hs
lib/Brfteleterrassen1/: Assets.hs  Content.hs  Generator.hs  HTML.hs  Models.hs  Pages.hs
scripts/: bench.sh  format.sh  serve.sh  test.sh  verify.sh
src/: Main.hs
test/: Brfteleterrassen1Spec.hs  Main.hs
web/: about.html  brokers.html  contact.html  documents.html  index.html  members.html  trivselregler.html
web/static/: style.css
